// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example1 1`] = `
"import { ref } from '@vue/composition-api';
export default {
  name: 'myComponent',

  setup() {
    const name = ref('名字');
    return {
      name: name
    };
  }

};"
`;

exports[`example2 1`] = `
"import { ref } from '@vue/composition-api';
export default {
  name: 'myComponent',
  setup: function () {
    const name = ref('名字');
    return {
      name: name
    };
  }
};"
`;

exports[`example3 1`] = `
"import { ref } from '@vue/composition-api';
export default {
  name: 'myComponent',

  setup() {
    const name = ref('名字');
    return {
      name: name
    };
  }

};"
`;

exports[`example4 1`] = `
"import { ref } from '@vue/composition-api';
export default {
  name: 'myComponent',

  setup() {
    const name = ref('名字');
    return {
      name: name
    };
  }

};"
`;

exports[`example5 1`] = `
"import { ref } from '@vue/composition-api';
export default {
  name: 'myComponent',

  setup() {
    const name = ref('名字');
    return {
      name: name
    };
  }

};"
`;

exports[`example6 1`] = `
"import { ref } from '@vue/composition-api';
export default {
  name: 'myComponent',

  setup() {
    const name = ref('名字');
    return () => <div>{name}</div>;
  }

};"
`;

exports[`example7 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _compositionApi = require(\\"@vue/composition-api\\");

var _default = {
  name: 'myComponent',
  filters: {
    setup(__RE__name) {
      console.log(name);
      return {};
    }

  },

  setup() {
    const name = (0, _compositionApi.ref)('0');
    const push = computed(() => name.value);

    const add = function () {
      name.value += 1;
    };

    return function () {
      h('div', null, push);
    };
  }

};
exports.default = _default;"
`;

exports[`example8 1`] = `
"import { ref } from '@vue/composition-api';
const options = {
  name: 'myComponent',
  filters: {
    setup(__RE__name) {
      console.log(name);
      return {};
    }

  },

  setup() {
    const name = ref('名字');
    const push = computed(() => name.value);
    return {
      name: name,
      push: push
    };
  }

};
export default options;"
`;

exports[`example8 2`] = `
"import { ref } from '@vue/composition-api';
const options = {
  name: 'myComponent',
  filters: {
    setup(_$$_name) {
      console.log(name);
      return {};
    }

  },

  setup() {
    const name = ref('名字');
    const push = computed(() => name.value);
    return {
      name: name,
      push: push
    };
  }

};
export default options;"
`;
